--- a/Code/MissMe_Dev/platformio.ini
+++ b/Code/MissMe_Dev/platformio.ini
@@ -13,3 +13,8 @@ platform = atmelavr
 board = uno
 framework = arduino
 
+; Custom Serial Monitor port
+monitor_port = COM9
+
+; Custom Serial Monitor speed (baud rate)
+monitor_speed = 9600
